--- a/Mobile/Mobile.Droid/Mobile.Android.csproj
+++ b/Mobile/Mobile.Droid/Mobile.Android.csproj
@@ -8,7 +8,7 @@
     <TemplateGuid>{c9e5eea5-ca05-42a1-839b-61506e0a37df}</TemplateGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>Mobile</RootNamespace>
-    <AssemblyName>Mobile.Droid</AssemblyName>
+    <AssemblyName>Mobile</AssemblyName>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
@@ -53,7 +53,7 @@
     <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
     <AndroidUseAapt2>false</AndroidUseAapt2>
     <AndroidLinkMode>None</AndroidLinkMode>
-    <AndroidSupportedAbis>armeabi-v7a;x86;arm64-v8a;x86_64</AndroidSupportedAbis>
+    <AndroidSupportedAbis>armeabi-v7a;arm64-v8a</AndroidSupportedAbis>
     <BundleAssemblies>false</BundleAssemblies>
     <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
     <AndroidKeyStore>false</AndroidKeyStore>
@@ -73,6 +73,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Mobile\Data\MarketDataService.cs">
+      <Link>MarketDataService.cs</Link>
+    </Compile>
+    <Compile Include="..\Mobile\ViewModels\SciChartSurfaceViewModel.cs">
+      <Link>SciChartSurfaceViewModel.cs</Link>
+    </Compile>
+    <Compile Include="..\Mobile\ViewModels\SciChartSurfaceViewModel1.cs">
+      <Link>SciChartSurfaceViewModel1.cs</Link>
+    </Compile>
     <Compile Include="Fragments\Base\PermissionsDefinition.cs" />
     <Compile Include="Fragments\Base\TitlesFragment .cs" />
     <Compile Include="Fragments\BLE\HeatmapChartFragment.cs" />
@@ -444,6 +453,11 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\AndroidManifest.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\layout\SciChartSurface.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
