--- a/Mobile/Mobile.iOS/Mobile.iOS.csproj
+++ b/Mobile/Mobile.iOS/Mobile.iOS.csproj
@@ -112,9 +112,9 @@
       <Project>{83f1dffb-a653-45dd-be81-c02374c6db07}</Project>
       <Name>MvvmCross.Plugins.BLE</Name>
     </ProjectReference>
-    <ProjectReference Include="..\BLE.Client\BLE.Client.csproj">
-      <Name>BLE.Client</Name>
-      <Project>{DFE97BE0-070B-43AD-BF37-50FD42B542D1}</Project>
+    <ProjectReference Include="..\Mobile\Mobile.csproj">
+      <Project>{2d45f39a-4e32-4679-a26e-80f55ab3cc84}</Project>
+      <Name>Mobile</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
